--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="network_common_err">请求失败,请稍后重试</string>
     <string name="network_no_data">暂无数据</string>
+    <string name="title_activity_user_info_edit">UserInfoEditActivity</string>
 </resources>
