--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RunnerFun</string>
+    <string name="app_name">跑步之家</string>
     <string name="title_activity_map">MapActivity</string>
 
     <!-- TODO: Remove or change this placeholder text -->
